examples updated